<resources>
    <string name="app_name">Football Match Schedule</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="subtitutes">Subtitutes</string>
    <string name="last_match">Last Match</string>
    <string name="next_match">Next Match</string>
    <string name="favorites">Favorites</string>
    <string name="vs">vs</string>
    <string name="matches">Matches</string>
    <string name="teams">Teams</string>
    <string name="search_hint">Search team..</string>
    <string name="search">Search</string>
    <string name="empty_match">Empty favorite match.</string>
    <string name="empty_team">Empty favorite team.</string>
    <string name="empty_text">-</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="player_image">Player Image</string>
    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>Spanish La Liga</item>
    </array>
</resources>
