<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/last_matches"
            android:enabled="true"
            android:icon="@drawable/ic_last_match"
            android:title="@string/last_match"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/next_matches"
            android:enabled="true"
            android:icon="@drawable/ic_next_match"
            android:title="@string/next_match"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/favorites"
            android:enabled="true"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorites"
            app:showAsAction="ifRoom"/>

</menu>
