<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/ivPlayer" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/player_image"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPlayerName" android:textSize="24sp"
                android:textAlignment="center" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/ivPlayer" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:textStyle="bold"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPlayerPos" android:textSize="18sp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvPlayerName"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:textAlignment="center"/>
        <TextView
                android:text="@string/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textAlignment="center" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline7"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/tvPlayerPos"/>
        <TextView
                android:text="@string/weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textAlignment="center" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/guideline7"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/tvPlayerPos"/>
        <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/guideline7" app:layout_constraintGuide_begin="193dp"
                                              android:orientation="vertical"/>
        <TextView
                android:text="@string/empty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPlayerHeight" android:textSize="24sp"
                android:textAlignment="center" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline7" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/empty_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPlayerWeight" android:textSize="24sp"
                android:textAlignment="center" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/guideline7" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvPlayerDesc" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/tvPlayerHeight"
                android:padding="15dp"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar2" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="13dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:visibility="invisible"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>